src/test/resources/typeSystemTestModels/valid/methods/MethodFormalParametersDifferentName.java
package typeSystemTestModels.valid.methods;

public class MethodFormalParametersDifferentName {

  public void setName(String firstname, String lastname) {

  }
}
