src/test/resources/typeSystemTestModels/invalid/methods/MethodFormalParametersDifferentName.java
package typeSystemTestModels.invalid.methods;

public class MethodFormalParametersDifferentName {

  public void setName(String name, String name) {

  }

}
